--- a/.github/workflows/produtos-api-nest.yml
+++ b/.github/workflows/produtos-api-nest.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
-      run: npm ci
-    - name: Tests
+      run: npm install
+    - name: Integrated Tests
       run: npm test
       env:
         CI: true
