--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -21,19 +21,27 @@ jobs:
       - run: npm ci
       - run: npm test
 
+  configure_aws_ecr_account:
+    name: Configure AWS credentials
+    runs-on: ubuntu-latest
+    steps:
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
   build_publish_docker:
     name: Build & Publish Docker Image to ECR
     runs-on: ubuntu-latest
     needs: ["test"]
     env:
-      REPO: ${{ secrets.DOCKER_ECR_REPO }}
+      ECR_REGISTRY: ${{ secrets.DOCKER_ECR_REPO }}
+      ECR_ARTIFACT: produtos-api
     steps:
       - uses: actions/checkout@v1
-      - name: Login to AWS ECR
-        run: aws ecr get-login-password --region us-east-1 | docker login --username ${{ secrets.DOCKER_ECR_USERNAME }} --password-stdin $REPO
+      - uses: aws-actions/amazon-ecr-login@v1
       - name: Build Docker image
-        run: docker build -t $REPO/produtos-api:latest -t $REPO/produtos-api:${GITHUB_SHA::8} .
+        run: docker build -t $ECR_REGISTRY/$ECR_ARTIFACT:latest -t $ECR_REGISTRY/$ECR_ARTIFACT:latest .
       - name: Push to ECR
-        run: docker push $REPO/produtos-api
-
-  
+        run: docker push $ECR_REGISTRY/$ECR_ARTIFACT
