--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -6,7 +6,17 @@ on:
       - "master"
 
 jobs:
-  test:
+  configure_aws_ecr_account:
+    name: Configure AWS credentials
+    runs-on: ubuntu-latest
+    steps:
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
+  build_test:
     name: Unit & Integration Tests
     runs-on: ubuntu-latest
     strategy:
@@ -21,20 +31,10 @@ jobs:
       - run: npm ci
       - run: npm test
 
-  configure_aws_ecr_account:
-    name: Configure AWS credentials
-    runs-on: ubuntu-latest
-    steps:
-      - uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-  build_publish_docker:
+  build_publish_ecr:
     name: Build & Publish Docker Image to ECR
     runs-on: ubuntu-latest
-    needs: ["test"]
+    needs: ["build_test"]
     env:
       ECR_REGISTRY: ${{ secrets.DOCKER_ECR_REPO }}
       ECR_ARTIFACT: produtos-api
