--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -6,15 +6,6 @@ on:
       - "master"
 
 jobs:
-  configure_aws_ecr_account:
-    name: Configure AWS credentials
-    runs-on: ubuntu-latest
-    steps:
-      - uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
 
   build_test:
     name: Unit & Integration Tests
@@ -24,24 +15,62 @@ jobs:
         node: ["10", "12"]
     steps:
       - uses: actions/checkout@v1
-      - name: Build
+      - name: Use Node.js
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
-      - run: npm ci
-      - run: npm test
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-node-
+            ${{ runner.OS }}-
+      - name: Install dependencies
+        run: npm ci
+      - name: Check lint
+        run: npm run lint      
+      - name: Unit & Integration Tests
+        run: npm test
 
-  build_publish_ecr:
-    name: Build & Publish Docker Image to ECR
+  publish_to_docker_hub:
+    name: Publish to Docker Hub
     runs-on: ubuntu-latest
     needs: ["build_test"]
     env:
-      ECR_REGISTRY: ${{ secrets.DOCKER_ECR_REPO }}
-      ECR_ARTIFACT: produtos-api
+      DOCKER_REPO: ${{ secrets.DOCKER_ECR_REPO }}
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     steps:
       - uses: actions/checkout@v1
-      - uses: aws-actions/amazon-ecr-login@v1
+      - name: Login to DockerHub
+        run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - name: Build Docker image
-        run: docker build -t $ECR_REGISTRY/$ECR_ARTIFACT:latest -t $ECR_REGISTRY/$ECR_ARTIFACT:latest .
+        run: docker build -t $DOCKER_REPO:latest -t $DOCKER_REPO:${GITHUB_SHA::8} .
+      - name: Push Docker image
+        run: docker push $DOCKER_REPO
+
+  publish_to_aws_ecr:
+    name: Publish to AWS ECR
+    runs-on: ubuntu-latest
+    needs: ["publish_to_docker_hub"]
+    env:
+      ECR_REGISTRY: ${{ secrets.DOCKER_ECR_REPO }}
+      ECR_ARTIFACT: produtos-api
+      IMAGE_TAG: ${GITHUB_SHA::8}
+    steps:
+      - uses: actions/checkout@v1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Login to AWS ECR
+        uses: aws-actions/amazon-ecr-login@v1
+      - name: Build Docker image
+        run: docker build -t $ECR_REGISTRY/$ECR_ARTIFACT:latest -t $ECR_REGISTRY/$ECR_ARTIFACT:${GITHUB_SHA::8} .
       - name: Push to ECR
         run: docker push $ECR_REGISTRY/$ECR_ARTIFACT
