--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: ["build_test"]
     env:
-      DOCKER_REPO: ${{ secrets.DOCKER_ECR_REPO }}
+      DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     steps:
