--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - "master"
+  pull_request:
+    
 
 jobs:
 
@@ -21,22 +23,27 @@ jobs:
           node-version: ${{ matrix.node }}
       - name: Cache Node.js modules
         uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
         with:
           # npm cache files are stored in `~/.npm` on Linux/macOS
           path: ~/.npm
-          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.OS }}-node-
-            ${{ runner.OS }}-
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
       - name: Install dependencies
         run: npm ci
-      - name: Check lint
-        run: npm run lint      
-      - name: Unit & Integration Tests
+      - name: Lint
+        run: npm run lint
+      - name: Build
+        run: npm build
+      - name: Tests
         run: npm test
 
   publish_to_docker_hub:
-    name: Publish to Docker Hub
+    name: Publish Docker Hub
     runs-on: ubuntu-latest
     needs: ["build_test"]
     env:
@@ -44,16 +51,16 @@ jobs:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     steps:
-      - uses: actions/checkout@v1
-      - name: Login to DockerHub
-        run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - name: Build Docker image
-        run: docker build -t $DOCKER_REPO:latest -t $DOCKER_REPO:${GITHUB_SHA::8} .
-      - name: Push Docker image
-        run: docker push $DOCKER_REPO
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v1
+        with:
+          username: $DOCKER_USERNAME
+          password: $DOCKER_PASSWORD
+          repository: $DOCKER_REPO
+          tag_with_ref: true
 
   publish_to_aws_ecr:
-    name: Publish to AWS ECR
+    name: Publish AWS ECR
     runs-on: ubuntu-latest
     needs: ["publish_to_docker_hub"]
     env:
