ci: remove warning from docker image

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -44,6 +44,7 @@ jobs:
 
   publish_to_docker_hub:
     name: Publish Docker Hub
+    if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     needs: ["build_test"]
     env:
@@ -51,13 +52,26 @@ jobs:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     steps:
-      - name: Push to Docker Hub
+      - name: Docker meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          images: thisakurai/produtos-api # list of Docker images to use as base name for tags
+          tag-sha: true
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          username: $DOCKER_USERNAME
-          password: $DOCKER_PASSWORD
-          repository: $DOCKER_REPO
-          tag_with_ref: true
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/386
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
 
   publish_to_aws_ecr:
     name: Publish AWS ECR
