--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -46,7 +46,7 @@ jobs:
     name: Publish Docker Hub
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
-    needs: ["build_test"]
+    needs: [build_test]
     env:
       DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
@@ -61,8 +61,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: $DOCKER_USERNAME
+          password: $DOCKER_PASSWORD
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -76,7 +76,7 @@ jobs:
   publish_to_aws_ecr:
     name: Publish AWS ECR
     runs-on: ubuntu-latest
-    needs: ["publish_to_docker_hub"]
+    needs: [publish_to_docker_hub]
     env:
       ECR_REGISTRY: ${{ secrets.DOCKER_ECR_REPO }}
       ECR_ARTIFACT: produtos-api
