--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -50,7 +50,7 @@ jobs:
     env:
       DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_TOKEN }}
     steps:
       - name: Docker meta
         id: docker_meta
@@ -62,7 +62,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: $DOCKER_USERNAME
-          password: $DOCKER_PASSWORD
+          password: $DOCKER_TOKEN
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
