--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -62,7 +62,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: $DOCKER_USERNAME
-          password: $DOCKER_TOKEN
+          password: $DOCKER_PASSWORD
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
