--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -50,6 +50,10 @@ jobs:
     env:
       DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
     steps:
+      - uses: actions/checkout@v2
+      - uses: docker/setup-buildx-action@v1
+        with:
+          driver: docker
       - name: Docker meta
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v1
@@ -65,11 +69,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/386
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
 
   publish_to_aws_ecr:
     name: Publish AWS ECR
@@ -95,8 +96,9 @@ jobs:
         run: docker push $ECR_REGISTRY/$ECR_ARTIFACT
 
   slack:
-    name: Slack message
+    name: Notify Slack
     runs-on: ubuntu-latest
+    if: failure()
     steps:
     - uses: 8398a7/action-slack@v3
       with:
