--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -50,10 +50,12 @@ jobs:
     env:
       DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: docker/setup-buildx-action@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
         with:
-          driver: docker
+          driver-opts: network=host
       - name: Docker meta
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v1
